--- a/templates/CHANGELOG.md.j2
+++ b/templates/CHANGELOG.md.j2
@@ -1,11 +1,21 @@
-{% set changelog_parts = prev_changelog_contents.split(
-        ctx.changelog_insertion_flag, maxsplit=1
-    )
+{#
+    This changelog template controls which changelog creation occurs
+    based on which mode is provided.
+
+    Modes:
+        - init: Initialize a full changelog from scratch
+        - update: Insert new version details where the placeholder exists in the current changelog
+
+#}{%  set insertion_flag = ctx.changelog_insertion_flag
+%}{%  set unreleased_commits = ctx.history.unreleased | dictsort
+%}{%  set releases = ctx.history.released.values() | list
+%}{#
+#}{%  if ctx.changelog_mode == "init"
+%}{%    include ".components/changelog_init.md.j2"
+%}{#
+#}{%  elif ctx.changelog_mode == "update"
+%}{%    set prev_changelog_file = ctx.prev_changelog_file
+%}{%    include ".components/changelog_update.md.j2"
+%}{#
+#}{%  endif
 %}
-{{ changelog_parts[0] }}{{ ctx.changelog_insertion_flag }}
-
-{% if ctx.changelog_mode == "update" %}
-{%   include ".changelog_update.md.j2" %}
-{% endif %}
-
-{{ changelog_parts[1] if changelog_parts | length > 1 else '' }}
